# lugnarummet

./: MUSIC_CREDITS.md  README.md  pyproject.toml
.github/workflows/: build-deb.yml  transifex-sync.yml
.tx/: config
data/: se.danielnylander.lugnarummet.desktop
lugnarummet/: __init__.py  __main__.py  export.py  main.py  music.py
po/: lugnarummet.pot  sv.mo  sv.po
